--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.2",
     "@types/jest": "^29.4.0",
     "jest-environment-jsdom": "^29.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.8.0",
     "save-dev": "^0.0.1-security"
   },
   "devDependencies": {
