--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.2",
     "@types/jest": "^29.4.0",
+    "emoji-picker-react": "^4.4.7",
     "jest-environment-jsdom": "^29.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
