--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "jest-environment-jsdom": "^29.4.1",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-datetime-picker": "^4.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.0",
@@ -30,6 +31,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.0.26",
+    "@types/react-datetime-picker": "^3.4.1",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
     "identity-obj-proxy": "^3.0.0",
