--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "-frontend",
   "private": true,
-  "proxy":"http://localhost:8080",
+  "proxy": "http://localhost:8080",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -13,6 +13,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.2",
     "@types/jest": "^29.4.0",
+    "axios": "^1.3.3",
     "bootstrap": "^5.2.3",
     "crypto-hash": "^2.0.1",
     "emoji-picker-react": "^4.4.7",
