--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "emoji-picker-react": "^4.4.7",
     "jest-environment-jsdom": "^29.4.1",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-datetime-picker": "^4.2.0",
     "react-dom": "^18.2.0",
