--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.8.0",
+    "reconnecting-websocket": "^4.4.0",
     "save-dev": "^0.0.1-security"
   },
   "devDependencies": {
