--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.8.0",
+    "react-use-websocket": "^4.3.1",
     "reconnecting-websocket": "^4.4.0",
     "save-dev": "^0.0.1-security"
   },
