--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "emoji-picker-react": "^4.4.7",
     "jest-environment-jsdom": "^29.4.1",
     "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
