--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-debounce-input": "^3.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-rainbow-components": "^1.32.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.8.0",
     "reconnecting-websocket": "^4.4.0",
