--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,25 @@
     "test": "jest"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.21.0",
     "@reduxjs/toolkit": "^1.9.2",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.4.0",
+    "@types/react": "^18.0.28",
+    "@types/react-datetime-picker": "^3.4.1",
+    "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react": "^3.1.0",
     "axios": "^1.3.3",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
     "crypto-hash": "^2.0.1",
     "emoji-picker-react": "^4.4.7",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.4.1",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
@@ -31,23 +43,9 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.8.0",
     "reconnecting-websocket": "^4.4.0",
-    "save-dev": "^0.0.1-security"
-  },
-  "devDependencies": {
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-react": "^7.18.6",
-    "@babel/preset-typescript": "^7.18.6",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/react": "^18.0.26",
-    "@types/react-datetime-picker": "^3.4.1",
-    "@types/react-dom": "^18.0.9",
-    "@vitejs/plugin-react": "^3.0.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.4.1",
-    "typescript": "^4.9.3",
-    "vite": "^4.0.0"
+    "save-dev": "^0.0.1-security",
+    "typescript": "^4.9.5",
+    "vite": "^4.1.4"
   },
   "jest": {
     "testEnvironment": "jsdom",
